src/test/contracts/negative/bad_contract.mligo
type storage = int
type parameter = nat

let main (action : parameter) (store : storage) : storage =
  store + 1